<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nome_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/purple_700"/>

    <TextView
        android:id="@+id/lblNome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lblNome"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/txtNome"
        />

    <TextView
        android:id="@+id/lblEndereco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lblEndereco"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/txtEndereco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/txtEndereco"
        />

    <TextView
        android:id="@+id/lblBairro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lblBairro"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/txtBairro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/txtBairro"
        />

    <TextView
        android:id="@+id/lblCep"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lblCep"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/txtCep"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/txtCep"
        />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btnCadastrar"/>

</LinearLayout>